--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
       </div>
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="#">See the Code</a>
+            <a class="nav-link" href="https://github.com/KaitlinRenfroe/renfroe-foxtrot-lab">See the Code</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Check this page's validation</a> 
+            <a class="nav-link" href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fkaitlinrenfroe.github.io%2Frenfroe-foxtrot-lab%2F">Check this page's validation</a> 
           </li>
         </ul>
       </div>
