--- a/index.html
+++ b/index.html
@@ -17,10 +17,7 @@
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">KR</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
         
     <!--nav tabs-->
     <nav class="navbar-nav" data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="50">
@@ -44,11 +41,12 @@
           <li class="nav-item">
             <a class="nav-link" href="#" target="_blank"><i class="fa fa-fw fa-check-circle"></i>Check this page's validation</a> 
           </li>
-        </ul>
+          </ul>
+        </nav>
       </div>
     </div>
   </nav>
-</nav>
+</div>
   
  
 <!--The first card with introduction-->
