--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <!--The second card with dev info-->
 <div class="row">
   <div class="col-md-10">
-    <div id="section1" class="card m-8 bg-success text-white">
+    <div id="section1a" class="card m-8 bg-success text-white">
       <div class="card-body">
         <h1>Dev Skills</h1>
           <p>Programming languages:</p>
@@ -140,7 +140,6 @@
      <div class="mt-5 p-2 bg-dark text-white text-center">
       <p>Kaitlin Renfroe | Foxtrot Lab | CIS 376-01</p>
     </div>
-</div>
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js'></script><script  src="./scripts/script.js"></script>
