--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
             <a class="nav-link" href="#section4"><i class="fa fa-fw fa-smile-o"></i>Fun Facts</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" target="_blank"><i class="fa fa-fw fa-code"></i>See the Code</a>          
+            <a class="nav-link" href="https://github.com/KaitlinRenfroe/renfroe-foxtrot-lab" target="_blank"><i class="fa fa-fw fa-code"></i>See the Code</a>          
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" target="_blank"><i class="fa fa-fw fa-check-circle"></i>Check this page's validation</a> 
+            <a class="nav-link" href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fkaitlinrenfroe.github.io%2Frenfroe-foxtrot-lab%2F" target="_blank"><i class="fa fa-fw fa-check-circle"></i>Check this page's validation</a> 
           </li>
           </ul>
         </nav>
